[build-system]
requires = ["setuptools>=80.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trackhelm"
version = "0.0.1"
description = ""
readme = "README.md"
requires-python = ">=3.14"
license = "GPL-3.0-only"
authors = [{ name = "malun22" }]
keywords = []
dependencies = [
    "pydantic>=2.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.18.0",
    "tomli-w>=1.2.0",
    "aiosqlite>=0.22.0",
    "asyncpg>=0.31.0",
]

[project.optional-dependencies]
dev = [
    "bump-my-version>=1.3.0",
    "build",
    "pre-commit>=4.6.0",
    "mypy>=2.1.0",
    "ruff>=0.15.14",
]

[project.urls]
Homepage = "https://github.com/trackhelm/trackhelm"
Repository = "https://github.com/trackhelm/trackhelm"

[tool.setuptools.packages.find]
where = ["."]
include = ["trackhelm*"]

[tool.setuptools.package-data]
trackhelm = ["py.typed"]

[tool.ruff]
line-length = 99
target-version = "py314"

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
]

[tool.ruff.lint.isort]
known-first-party = ["optuna", "tests", "docs"]
lines-after-imports = 2
force-single-line = true
force-sort-within-sections = true
order-by-type = false

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.14"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
warn_unused_ignores = false
